Fix z-index issue

--- a/components/navbar/navbar.module.scss
+++ b/components/navbar/navbar.module.scss
@@ -2,7 +2,7 @@
 @use "../../styles/mixins" as m;
 
 .main {
-    height: 60px;
+    height: v.$nav-height;
     background-color: v.$white;
     box-shadow:  0px 0px 10px 0px rgba(0, 0, 0, 0.2);
     display: flex;
@@ -12,7 +12,7 @@
     color: v.$black;
     padding: 0 2rem;
     position: relative;
-    z-index: 2;
+    z-index: 30;
 
     a {
         margin-right: 10px;
@@ -42,7 +42,7 @@
     background-color: v.$gray;
     position: absolute;
     transition: top ease 0.3s;
-
+    z-index: 20;
     .links {
         display: flex;
         flex-direction: column;
